# ip-assignment

./: .gitignore  CMakeLists.txt  README.md
resources/Image Src/: E_bit.c
src/: main.cpp
src/part_a/: decoder.cpp  encoder.cpp
src/part_b/: decoder.cpp  encoder.cpp
src/part_c/: noise_generator.cpp
src/part_d/: decoder.cpp  encoder.cpp
